<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Challenge3">


    <Button
        android:onClick="displayFirstParagraph"
        android:id="@+id/text_one"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="displaySecondParagraph"
        android:id="@+id/text_two"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_two"
        app:layout_constraintStart_toEndOf="@+id/text_one"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="displayThreeParagraph"
        android:id="@+id/text_three"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/text_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_two"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>